tests/NormalTests/paczka1/fuzzy1/62450929.err
Error in line 1: 5JRy S817 12,8
Error in line 3: tqfWYCRjy S460 24,3
Error in line 12: tqfWYCRjy S817 58,1
Error in line 7: S460 A779 28,7
Error in line 19: bJ013w9 S460 356,8
Error in line 30: 5JRy A779 64,6
